--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,16 +33,16 @@ jobs:
       run: dotnet build --configuration Release src/Shims/Shims.csproj
 
     - name: Build .NET 8 MSTest project
-      run: dotnet build --configuration Release tests/Shims.Tests/Shims.Tests.csproj
+      run: dotnet build --configuration Release src/Shims.Tests/Shims.Tests.csproj
 
     - name: Build .NET Framework 4.8 MSTest project
-      run: msbuild /p:Configuration=Release tests/Shims.Net48.Tests/Shims.Net48.Tests.csproj
+      run: msbuild /p:Configuration=Release src/Shims.Net48.Tests/Shims.Net48.Tests.csproj
 
     - name: Test .NET 8 MSTest project
-      run: dotnet test --configuration Release --no-build tests/Shims.Tests/Shims.Tests.csproj
+      run: dotnet test --configuration Release --no-build src/Shims.Tests/Shims.Tests.csproj
 
     - name: Test .NET Framework 4.8 MSTest project
       run: |
-        nuget restore tests/Shims.Net48.Tests/Shims.Net48.Tests.csproj
-        msbuild /p:Configuration=Release tests/Shims.Net48.Tests/Shims.Net48.Tests.csproj
-        vstest.console.exe tests/Shims.Net48.Tests/bin/Release/Shims.Net48.Tests.dll
+        nuget restore src/Shims.Net48.Tests/Shims.Net48.Tests.csproj
+        msbuild /p:Configuration=Release src/Shims.Net48.Tests/Shims.Net48.Tests.csproj
+        vstest.console.exe src/Shims.Net48.Tests/bin/Release/Shims.Net48.Tests.dll
