--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,9 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: ${{ matrix.dotnet-version }}
+
+    - name: Setup MSBUILD
+      uses: microsoft/setup-msbuild@v2
         
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1.0.5
