--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,6 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: ${{ matrix.dotnet-version }}
-
-    - name: Setup MSBUILD
-      uses: microsoft/setup-msbuild@v2
         
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1.0.5
@@ -36,20 +33,12 @@ jobs:
         nuget-version: ${{ matrix.nuget-version }}
 
     - name: Restore dependencies
-      run: |
-        dotnet restore src/Shims.sln
+      run: dotnet restore src/Shims.sln
 
     - name: Build .NET Standard 2.0 library
       run: dotnet build --configuration Release src/Shims/Shims.csproj
 
-    - name: Build .NET 8 MSTest project
-      run: dotnet build --configuration Release src/Shims.NET8.Tests/Shims.NET8.Tests.csproj
-
-    - name: Build .NET Framework 4.8 MSTest project
-      run: msbuild /p:Configuration=Release src/Shims.Net48.Tests/Shims.Net48.Tests.csproj
-
-    - name: Test .NET 8 MSTest project
-      run: dotnet test --configuration Release --no-build src/Shims.NET8.Tests/Shims.NET8.Tests.csproj
-
-    - name: Test .NET Framework 4.8 MSTest project
-      run: vstest.console.exe src/Shims.Net48.Tests/bin/Release/Shims.Net48.Tests.dll
+    - name: Run Tests
+      run: |
+        dotnet build --configuration Release src/Shims.NET8.Tests/Shims.NET8.Tests.csproj
+        dotnet test --configuration Release --no-build src/Shims.NET8.Tests/Shims.NET8.Tests.csproj
