--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,13 @@ jobs:
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run : dotnet sonarscanner begin /k:"Nixsoft-FR_Shims" /o:"nixsoft-fr" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+      run : |
+        dotnet sonarscanner begin \
+          /k:"Nixsoft-FR_Shims" \
+          /o:"nixsoft-fr"  \
+          /d:sonar.token="${{ secrets.SONAR_TOKEN }}" \
+          /d:sonar.host.url="https://sonarcloud.io" \
+          /d:sonar.cs.opencover.reportsPaths="./coverage/coverage.opencover.xml"
 
     - name: Build .NET Standard 2.0 library
       run: dotnet build --configuration Release src/Shims/Shims.csproj
@@ -56,7 +62,12 @@ jobs:
     - name: Run Tests
       run: |
         dotnet build --configuration Release src/Shims.NET8.Tests/Shims.NET8.Tests.csproj
-        dotnet test --configuration Release --no-build src/Shims.NET8.Tests/Shims.NET8.Tests.csproj
+        dotnet test --configuration Release --no-build \
+          /p:CollectCoverage=true \
+          /p:CoverletOutput=./coverage/ \
+          /p:CoverletOutputFormat=opencover \
+          /p:MergeWith="./coverage/coverage.opencover.xml" \
+          src/Shims.NET8.Tests/Shims.NET8.Tests.csproj
 
     - name : End Scan
       env:
