--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,18 +50,11 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run : dotnet sonarscanner begin /k:"Nixsoft-FR_Shims" /o:"nixsoft-fr" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths="./coverage/coverage.opencover.xml"
 
-    - name: Build .NET Standard 2.0 library
-      run: dotnet build --configuration Release src/Shims/Shims.csproj
+    - name: Build Solution
+      run: dotnet build --configuration Release src/Shims.sln
 
     - name: Run Tests
-      run: |
-        dotnet build --configuration Release src/Shims.NET8.Tests/Shims.NET8.Tests.csproj
-        dotnet test --configuration Release --no-build \
-          /p:CollectCoverage=true \
-          /p:CoverletOutput=./coverage/ \
-          /p:CoverletOutputFormat=opencover \
-          /p:MergeWith="./coverage/coverage.opencover.xml" \
-          src/Shims.NET8.Tests/Shims.NET8.Tests.csproj
+      run: dotnet test --configuration Release --no-build /p:CollectCoverage=true /p:CoverletOutput=./coverage/ /p:CoverletOutputFormat=opencover /p:MergeWith="./coverage/coverage.opencover.xml" src/Shims.sln
 
     - name : End Scan
       env:
